--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ dist
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+package-lock.json
 
 # Mac File System File...utterly useless to anyone but me.
 .DS_Store
