--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ dist
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 package-lock.json
+bower_components
 
 # Mac File System File...utterly useless to anyone but me.
 .DS_Store
