--- a/src/bulma/bower.json
+++ b/src/bulma/bower.json
@@ -33,14 +33,14 @@
   ],
   "private": true,
   "dependencies": {
-    "bulma": "^0.6.2",
+    "bulma": "^0.7.0",
     "bulma-extensions": "^1.0.14",
-    "bulma-calendar": "^1.1.10",
+    "bulma-calendar": "^1.3.0",
     "bulma-timeline": "^2.0.1",
     "bulma-switch": "^1.0.1",
-    "bulma-pricingtable": "^1.0.0",
+    "bulma-pricingtable": "^1.2.0",
     "bulma-divider": "^1.0.1",
-    "bulma-carousel": "^1.0.12",
+    "bulma-carousel": "^1.1.0",
     "bulma-checkradio": "^1.0.1",
     "bulma-iconpicker": "^1.0.1",
     "bulma-pageloader": "^1.0.1",
@@ -54,5 +54,8 @@
     "bulma-badge": "^1.0.1",
     "bulmajs": "bulma.js#^0.1.0",
     "jQuery": "^3.3.1"
+  },
+  "resolutions": {
+    "bulma": "^0.7.0"
   }
 }
