--- a/config.toml
+++ b/config.toml
@@ -23,6 +23,9 @@ ISO8601 = "2006-01-02T15:04:05JST"
 [blackfriday]
     plainIdAnchors = true
 
+[outputs]
+    home = [ "HTML", "RSS", "JSON" ]
+
 [imaging]
 # Default resample filter used for resizing. Default is Box,
 # a simple and fast averaging filter appropriate for downscaling.
