--- a/src/bulma/bower.json
+++ b/src/bulma/bower.json
@@ -34,13 +34,13 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.7.1",
-    "bulma-extensions": "^1.0.14",
+    "bulma-extensions": "^1.0.25",
     "bulma-calendar": "^1.3.0",
-    "bulma-timeline": "^2.0.1",
+    "bulma-timeline": "^2.0.3",
     "bulma-switch": "^1.0.1",
     "bulma-pricingtable": "^1.2.0",
-    "bulma-divider": "^1.0.1",
-    "bulma-carousel": "^1.1.0",
+    "bulma-divider": "^1.0.4",
+    "bulma-carousel": "^2.0.9",
     "bulma-checkradio": "^1.0.1",
     "bulma-iconpicker": "^1.0.1",
     "bulma-pageloader": "^1.0.1",
@@ -56,6 +56,7 @@
     "jQuery": "^3.3.1"
   },
   "resolutions": {
-    "bulma": "^0.7.0"
+    "bulma": "^0.7.0",
+    "bulma-carousel": "^2.0.9"
   }
 }
