--- a/src/bulma/bower.json
+++ b/src/bulma/bower.json
@@ -34,13 +34,13 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.7.1",
-    "bulma-extensions": "^1.0.26",
+    "bulma-extensions": "^1.0.28",
     "bulma-calendar": "^1.3.0",
     "bulma-timeline": "^2.0.3",
     "bulma-switch": "^1.0.2",
     "bulma-pricingtable": "^1.2.0",
     "bulma-divider": "^1.0.4",
-    "bulma-carousel": "^2.0.9",
+    "bulma-carousel": "^2.0.12",
     "bulma-checkradio": "^1.0.2",
     "bulma-iconpicker": "^1.0.1",
     "bulma-pageloader": "^1.0.1",
@@ -53,7 +53,8 @@
     "bulma-slider": "^1.0.4",
     "bulma-badge": "^1.0.1",
     "bulmajs": "bulma.js#^0.1.0",
-    "jQuery": "^3.3.1"
+    "jQuery": "^3.3.1",
+    "fontawesome": "^5.0.13"
   },
   "resolutions": {
     "bulma": "^0.7.0",
