--- a/.s3deploy.yml
+++ b/.s3deploy.yml
@@ -1,14 +1,34 @@
 routes:
     - route: "^.+\\.(js|css|wasm)$"
-      #  cache for 1 year (unit is seconds)
+      # cache for 1 year (unit is seconds)
       headers:
          Cache-Control: "max-age=31536000, no-transform, public"
       gzip: true
-    - route: "^.+\\.(png|jpg|gif|bmp|jpeg|JPG|PNG|svg|ogg|webm|mp4|webp|eot|woff|otf|ttf|woff2)$"
+    - route: "^.+\\.(png|jpg|gif|bmp|jpeg|webp)$"
       # cache for 1 month
       headers:
          Cache-Control: "max-age=2628000, no-transform, public"
       gzip: false
+    - route: "^.+\\.(eot|otf|ttf)$"
+      # cache for 1 month
+      headers:
+         Cache-Control: "max-age=2628000, no-transform, public"
+      gzip: true
+    - route: "^.+\\.(woff|woff2)$"
+      # cache for 1 month
+      headers:
+         Cache-Control: "max-age=2628000, no-transform, public"
+      gzip: false
+    - route: "^.+\\.(ogg|webm|mp4)$"
+      # cache for 1 month
+      headers:
+         Cache-Control: "max-age=2628000, no-transform, public"
+      gzip: false
+    - route: "^.+\\.(svg)$"
+      # cache for 1 month
+      headers:
+         Cache-Control: "max-age=2628000, no-transform, public"
+      gzip: true
     - route: "^.+\\.(ico)$"
       # cache for 1 week
       headers:
@@ -18,6 +38,6 @@ routes:
       # cache for 1 hour
       headers:
          Cache-Control: "max-age=3600, no-transform, public"
-      gzip: false
+      gzip: true
     - route: "^.+\\.(html|xml|json)$"
       gzip: true
