--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,12 @@ jobs:
               ./s3deploy -source=$HUGO_BUILD_DIR/ja -region=us-east-1 -bucket=$AWS_S3_ESOLIACOJP_BKTNAME
               aws cloudfront create-invalidation --distribution-id $AWS_CF_ESOLIACOM_DISTN --paths "/index.html" "/" "/page/*" "/post/*" "/sitemap/*" "/404/*" "/tags/*" "/topics/*"
               aws cloudfront create-invalidation --distribution-id $AWS_CF_ESOLIACOJP_DISTN --paths "/index.html" "/" "/page/*" "/post/*" "/sitemap/*" "/404/*" "/tags/*" "/topics/*"
+              curl -A "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13) AppleWebKit/604.1.38 (KHTML, like Gecko) Version/11.0 Safari/604.1.38" "http://pingomatic.com/ping/?title=イソリア+バイリンガル+IT+アウトソーシング&blogurl=https%3A%2F%2Fesolia.co.jp&rssurl=https%3A%2F%2Fesolia.co.jp%2Findex.xml&chk_weblogscom=on&chk_blogs=on&chk_feedburner=on&chk_newsgator=on&chk_myyahoo=on&chk_pubsubcom=on&chk_blogdigger=on&chk_weblogalot=on&chk_newsisfree=on&chk_topicexchange=on&chk_google=on&chk_tailrank=on&chk_skygrid=on&chk_collecta=on&chk_superfeedr=on"
+              curl "http://www.google.com/webmasters/tools/ping?sitemap=https%3A%2F%2Fesolia.co.jp%2Fsitemap.xml"
+              curl "http://www.bing.com/webmaster/ping.aspx?siteMap=https%3A%2F%2Fesolia.co.jp%2Fsitemap.xml"
+              curl -A "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13) AppleWebKit/604.1.38 (KHTML, like Gecko) Version/11.0 Safari/604.1.38" "http://pingomatic.com/ping/?title=eSolia+Bilingual+IT+Outsourcing&blogurl=https%3A%2F%2Fesolia.com&rssurl=https%3A%2F%2Fesolia.com%2Findex.xml&chk_weblogscom=on&chk_blogs=on&chk_feedburner=on&chk_newsgator=on&chk_myyahoo=on&chk_pubsubcom=on&chk_blogdigger=on&chk_weblogalot=on&chk_newsisfree=on&chk_topicexchange=on&chk_google=on&chk_tailrank=on&chk_skygrid=on&chk_collecta=on&chk_superfeedr=on"
+              curl "http://www.google.com/webmasters/tools/ping?sitemap=https%3A%2F%2Fesolia.com%2Fsitemap.xml"
+              curl "http://www.bing.com/webmaster/ping.aspx?siteMap=https%3A%2F%2Fesolia.com%2Fsitemap.xml"
             else
               echo "Not master branch, dry run only"
             fi
