--- a/src/bulma/bower.json
+++ b/src/bulma/bower.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "bulma": "^0.7.1",
     "bulma-extensions": "^1.0.32",
-    "bulma-calendar": "^1.3.0",
+    "bulma-calendar": "^2.0.0",
     "bulma-timeline": "^2.0.3",
     "bulma-switch": "^1.0.2",
     "bulma-pricingtable": "^1.2.0",
@@ -58,6 +58,7 @@
   },
   "resolutions": {
     "bulma": "^0.7.0",
-    "bulma-carousel": "^2.0.9"
+    "bulma-carousel": "^2.0.9",
+    "bulma-calendar": "^2.0.0"
   }
 }
