--- a/.gitattributes
+++ b/.gitattributes
@@ -39,6 +39,8 @@
 
 # Declare files that will always have CRLF line endings on checkout. From github.
 *.sln text eol=crlf
+eSolia-Japan-Emergency-Contacts.en.csv text eol=crlf
+eSolia-Japan-Emergency-Contacts.ja.csv text eol=crlf
 
 # Denote all files that are truly binary and should not be modified.
 *.PDF binary
