--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,3 +59,18 @@ jobs:
             else
               echo "Not master branch, dry run only"
             fi
+workflows:
+  version: 2
+  build_test_deploy:
+    jobs:
+      - build
+  autopublish:
+    triggers:
+      - schedule:
+          cron: "25 13 * * *"
+          filters:
+            branches:
+              only:
+                - master
+    jobs:
+      - build
