--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
       HUGO_BUILD_DIR: ~/hugo/public
     steps:
 
-      # install git
-      - run: apk update && apk add git
+      # install git and jq for json manipulation
+      - run: apk update && apk add git && apk add jq
 
       # checkout the repository
       - checkout
@@ -27,6 +27,20 @@ jobs:
           name: Install s3deploy from bep
           command: |
             curl -L https://github.com/bep/s3deploy/releases/download/v2.0.2/s3deploy_2.0.2_Linux-64bit.tar.gz | tar xvz
+
+      - run:
+          name: Refresh data
+          command: |
+            rm -rf $HOME/hugo/$CIRCLE_PROJECT_REPONAME/data/success.json
+            rm -rf $HOME/hugo/$CIRCLE_PROJECT_REPONAME/data/info.json
+            rm -rf $HOME/hugo/$CIRCLE_PROJECT_REPONAME/data/japancontact.json
+            rm -rf $HOME/hugo/$CIRCLE_PROJECT_REPONAME/static/eSolia-Japan-Emergency-Contacts.en.csv
+            rm -rf $HOME/hugo/$CIRCLE_PROJECT_REPONAME/static/eSolia-Japan-Emergency-Contacts.ja.csv
+            curl -k "https://pro.dbflex.net/secure/api/v2/$PRODB_DBNUM/$PRODB_TOKEN/Web%20Project/List%20All%20for%20JSON/select.json" | jq '.' > $HOME/hugo/$CIRCLE_PROJECT_REPONAME/data/success.json
+            curl -k "https://pro.dbflex.net/secure/api/v2/$PRODB_DBNUM/$PRODB_TOKEN/Web%20Information/List%20All%20on%20Website/select.json"  | jq '.' > $HOME/hugo/$CIRCLE_PROJECT_REPONAME/data/info.json
+            curl -k "https://pro.dbflex.net/secure/api/v2/$PRODB_DBNUM/$PRODB_TOKEN/Web%20Japan%20Contact/API%20List%20All/select.json" | jq '.' > $HOME/hugo/$CIRCLE_PROJECT_REPONAME/data/japancontact.json
+            curl -k "https://pro.dbflex.net/secure/api/v2/$PRODB_DBNUM/$PRODB_TOKEN/Web%20Japan%20Contact/API%20List%20for%20CSV/select.csv" -o $HOME/hugo/$CIRCLE_PROJECT_REPONAME/static/eSolia-Japan-Emergency-Contacts.en.csv
+            curl -k "https://pro.dbflex.net/secure/api/v2/$PRODB_DBNUM/$PRODB_TOKEN/Web%20Japan%20Contact/API%20List%20for%20CSV%E2%80%A1/select.csv" -o $HOME/hugo/$CIRCLE_PROJECT_REPONAME/static/eSolia-Japan-Emergency-Contacts.ja.csv
 
       # build with Hugo
       - run:
