--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,14 +29,14 @@ jobs:
             curl -L https://github.com/bep/s3deploy/releases/download/v2.0.2/s3deploy_2.0.2_Linux-64bit.tar.gz | tar xvz
 
       - run:
-          name: list stuff
+          name: Run commands to see results on std-out in the log
           command: |
              pwd
              hugo env
       #        ls -la $HOME
       #        ls -la $HOME/hugo
-      #        echo $HOME
-      #        echo $CIRCLE_PROJECT_REPONAME
+             echo $HOME
+             echo $CIRCLE_PROJECT_REPONAME
 
       - run:
           name: Refresh data
