"In app purchase" re-translation for used japanese

--- a/data/japanapp.json
+++ b/data/japanapp.json
@@ -35,7 +35,7 @@
     "Description": "Yurekuru Call",
     "Description‡": "ゆれくるコール",
     "Notes": "Quake alert smartphone app with in-app purchases.",
-    "Notes‡": "地震情報 アプリ (インアプリ購入有り)",
+    "Notes‡": "地震情報 アプリ (アプリ内課金あり)",
     "URL": "https://itunes.apple.com/us/app/yurekuru-call/id398954883",
     "URL‡": "http://www.rcsc.co.jp/yurekuru"
   },
