--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
           name: Install s3deploy from bep
           command: |
-            curl -L https://github.com/bep/s3deploy/releases/download/v2.0.2/s3deploy_2.0.2_Linux-64bit.tar.gz | tar xvz
+            curl -L https://github.com/bep/s3deploy/releases/download/v2.2.0/s3deploy_2.2.0_Linux-64bit.tar.gz | tar xvz
 
       - run:
           name: Run commands to see results on std-out in the circleci web gui log
@@ -68,14 +68,15 @@ jobs:
 
       # `deploy` step: identical to a `run` step, but uses only one container:
       # https://circleci.com/docs/2.0/configuration-reference/#deploy
+      # Old aws invalidation commands:
+       # aws cloudfront create-invalidation --distribution-id $AWS_CF_ESOLIACOM_DISTN --paths "/index.html" "/" "/page/*" "/post/*" "/sitemap/*" "/404/*" "/tags/*" "/topics/*"
+       # aws cloudfront create-invalidation --distribution-id $AWS_CF_ESOLIACOJP_DISTN --paths "/index.html" "/" "/page/*" "/post/*" "/sitemap/*" "/404/*" "/tags/*" "/topics/*"
       - deploy:
           name: Deploy to AWS S3
           command: |
             if [ "${CIRCLE_BRANCH}" = "master" ]; then
-              ./s3deploy -source=$HUGO_BUILD_DIR/en -region=us-east-1 -bucket=$AWS_S3_ESOLIACOM_BKTNAME
-              ./s3deploy -source=$HUGO_BUILD_DIR/ja -region=us-east-1 -bucket=$AWS_S3_ESOLIACOJP_BKTNAME
-              aws cloudfront create-invalidation --distribution-id $AWS_CF_ESOLIACOM_DISTN --paths "/index.html" "/" "/page/*" "/post/*" "/sitemap/*" "/404/*" "/tags/*" "/topics/*"
-              aws cloudfront create-invalidation --distribution-id $AWS_CF_ESOLIACOJP_DISTN --paths "/index.html" "/" "/page/*" "/post/*" "/sitemap/*" "/404/*" "/tags/*" "/topics/*"
+              ./s3deploy -source=$HUGO_BUILD_DIR/en -region=us-east-1 -bucket=$AWS_S3_ESOLIACOM_BKTNAME -distribution-id=$AWS_CF_ESOLIACOM_DISTN
+              ./s3deploy -source=$HUGO_BUILD_DIR/ja -region=us-east-1 -bucket=$AWS_S3_ESOLIACOJP_BKTNAME -distribution-id=$AWS_CF_ESOLIACOJP_DISTN
               curl -A "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13) AppleWebKit/604.1.38 (KHTML, like Gecko) Version/11.0 Safari/604.1.38" "http://pingomatic.com/ping/?title=イソリア+バイリンガル+IT+アウトソーシング&blogurl=https%3A%2F%2Fesolia.co.jp&rssurl=https%3A%2F%2Fesolia.co.jp%2Findex.xml&chk_weblogscom=on&chk_blogs=on&chk_feedburner=on&chk_newsgator=on&chk_myyahoo=on&chk_pubsubcom=on&chk_blogdigger=on&chk_weblogalot=on&chk_newsisfree=on&chk_topicexchange=on&chk_google=on&chk_tailrank=on&chk_skygrid=on&chk_collecta=on&chk_superfeedr=on"
               curl "http://www.google.com/webmasters/tools/ping?sitemap=https%3A%2F%2Fesolia.co.jp%2Fsitemap.xml"
               curl "http://www.bing.com/webmaster/ping.aspx?siteMap=https%3A%2F%2Fesolia.co.jp%2Fsitemap.xml"
